--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
        document.form.textview.value = exp.substring(0,exp.length-1)
    }
 </script>
-    <title>Document</title>
+    <title>Simple Calculator</title>
 </head>
 <body>
     <div class="background">
